# protein-sort

./: CMakeLists.txt  Parser.cpp  Parser.h  Protein.h  Sorts.h  main.cpp  readme.md
